@@ -1,12 +1,15 @@
 % STK_PARAM_RELIK computes the restricted likelihood of a model given data
 %
-% CALL: [ARL, dARL_dtheta, dARL_dLNV] = stk_param_relik (MODEL, XI, YI)
+% CALL: C = stk_param_relik (MODEL, XI, YI)
 %
-%   computes the opposite of the restricted likelihood (denoted by ARL for
-%   Anti-Restricted Likelihood) of MODEL given the data (XI, YI). The function
-%   also returns the gradient dARL_dtheta of ARL with respect to the parameters
-%   of the covariance function and the derivative dARL_dLNV of ARL with respect
-%   to the logarithm of the noise variance.
+%   computes the value C of the opposite of the restricted likelihood criterion
+%   for the MODEL given the data (XI, YI).
+%
+% CALL: [C, COVPARAM_DIFF, LNV_DIFF] = stk_param_relik (MODEL, XI, YI)
+%
+%   also returns the gradient COVPARAM_DIFF of C with respect to the parameters
+%   of the covariance function, and its derivative LNV_DIFF of C with respect to
+%   the logarithm of the noise variance.
 %
 % EXAMPLE: see paramestim/stk_param_estim.m
 
@@ -38,7 +41,7 @@
 %    You should  have received a copy  of the GNU  General Public License
 %    along with STK.  If not, see <http://www.gnu.org/licenses/>.
 
-function [rl, drl_param, drl_lnv] = stk_param_relik (model, xi, yi)
+function [C, covparam_diff, lnv_diff] = stk_param_relik (model, xi, yi)
 
 % Get numerical parameter vector from parameter object
 paramvec = stk_get_optimizable_parameters (model.param);
@@ -101,19 +104,19 @@ end
 v = linsolve (U, yyi, struct ('UT', true, 'TRANSA', true));
 attache = sum (v .^ 2);
 
-rl = 0.5 * ((n - q) * log(2 * pi) + ldetWKW + attache);
+C = 0.5 * ((n - q) * log(2 * pi) + ldetWKW + attache);
 
 
 %% Add priors
 
 if PARAMPRIOR
     delta_p = paramvec - model.prior.mean;
-    rl = rl + 0.5 * delta_p' * model.prior.invcov * delta_p;
+    C = C + 0.5 * delta_p' * model.prior.invcov * delta_p;
 end
 
 if NOISEPRIOR
     delta_lnv = model.lognoisevariance - model.noiseprior.mean;
-    rl = rl + 0.5 * (delta_lnv ^ 2) / model.noiseprior.var;
+    C = C + 0.5 * (delta_lnv ^ 2) / model.noiseprior.var;
 end
 
 
@@ -122,7 +125,7 @@ end
 if nargout >= 2
     
     nbparam = length (paramvec);
-    drl_param = zeros (nbparam, 1);
+    covparam_diff = zeros (nbparam, 1);
     
     if exist ('OCTAVE_VERSION', 'builtin') == 5
         % Octave remembers that U is upper-triangular and automatically picks
@@ -147,22 +150,22 @@ if nargout >= 2
     
     for diff = 1:nbparam
         V = feval (model.covariance_type, model.param, xi, xi, diff);
-        drl_param(diff) = 1/2 * (sum (sum (H .* V)) - z' * V * z);
+        covparam_diff(diff) = 1/2 * (sum (sum (H .* V)) - z' * V * z);
     end
     
     if PARAMPRIOR
-        drl_param = drl_param + model.prior.invcov * delta_p;
+        covparam_diff = covparam_diff + model.prior.invcov * delta_p;
     end
     
     if nargout >= 3
         if model.lognoisevariance == -inf
-            drl_lnv = nan;
+            lnv_diff = nan;
         else
             diff = 1;
             V = stk_noisecov (n, model.lognoisevariance, diff);
-            drl_lnv = 1/2 * (sum (sum (H .* V)) - z' * V * z);
+            lnv_diff = 1/2 * (sum (sum (H .* V)) - z' * V * z);
             if NOISEPRIOR
-                drl_lnv = drl_lnv + delta_lnv / model.noiseprior.var;
+                lnv_diff = lnv_diff + delta_lnv / model.noiseprior.var;
             end
         end
     end
@@ -172,8 +175,7 @@ end
 end % function
 
 
-
-%!shared f, xi, zi, NI, model, J, dJ1, dJ2
+%!shared f, xi, zi, NI, model, C, dC1, dC2
 %!
 %! f = @(x)(- (0.8 * x(:, 1) + sin (5 * x(:, 2) + 1) ...
 %!          + 0.1 * sin (10 * x(:, 3))));
@@ -188,16 +190,16 @@ end % function
 %! model = stk_model('stk_materncov_aniso');
 %! model.param = log([SIGMA2; NU; 1/RHO1 * ones(DIM, 1)]);
 
-%!error [J, dJ1, dJ2] = stk_param_relik ();
-%!error [J, dJ1, dJ2] = stk_param_relik (model);
-%!error [J, dJ1, dJ2] = stk_param_relik (model, xi);
-%!test  [J, dJ1, dJ2] = stk_param_relik (model, xi, zi);
+%!error [C, dC1, dC2] = stk_param_relik ();
+%!error [C, dC1, dC2] = stk_param_relik (model);
+%!error [C, dC1, dC2] = stk_param_relik (model, xi);
+%!test  [C, dC1, dC2] = stk_param_relik (model, xi, zi);
 
 %!test
 %! TOL_REL = 0.01;
-%! assert (stk_isequal_tolrel (J, 21.6, TOL_REL));
-%! assert (stk_isequal_tolrel (dJ1, [4.387 -0.1803 0.7917 0.1392 2.580]', TOL_REL));
-%! assert (isnan (dJ2));
+%! assert (stk_isequal_tolrel (C, 21.6, TOL_REL));
+%! assert (stk_isequal_tolrel (dC1, [4.387 -0.1803 0.7917 0.1392 2.580]', TOL_REL));
+%! assert (isnan (dC2));
 
 %!shared xi, zi, model, TOL_REL
 %! xi = [-1 -.6 -.2 .2 .6 1]';
@@ -208,17 +210,17 @@ end % function
 %! TOL_REL = 0.01;
 
 %!test  % Another simple 1D check
-%! [ARL, dARL_dtheta, dARL_dLNV] = stk_param_relik (model, xi, zi);
-%! assert (stk_isequal_tolrel (ARL, 6.327, TOL_REL));
-%! assert (stk_isequal_tolrel (dARL_dtheta, [0.268 0.0149 -0.636]', TOL_REL));
-%! assert (stk_isequal_tolrel (dARL_dLNV, -1.581e-04, TOL_REL));
+%! [C, dC1, dC2] = stk_param_relik (model, xi, zi);
+%! assert (stk_isequal_tolrel (C, 6.327, TOL_REL));
+%! assert (stk_isequal_tolrel (dC1, [0.268 0.0149 -0.636]', TOL_REL));
+%! assert (stk_isequal_tolrel (dC2, -1.581e-04, TOL_REL));
 
 %!test  % Same 1D test with simple kriging
 %! model.lm = stk_lm_null;
-%! [ARL, dARL_dtheta, dARL_dLNV] = stk_param_relik (model, xi, zi);
-%! assert (stk_isequal_tolrel (ARL, 7.475, TOL_REL));
-%! assert (stk_isequal_tolrel (dARL_dtheta, [0.765 0.0238 -1.019]', TOL_REL));
-%! assert (stk_isequal_tolrel (dARL_dLNV, 3.0517e-03, TOL_REL));
+%! [C, dC1, dC2] = stk_param_relik (model, xi, zi);
+%! assert (stk_isequal_tolrel (C, 7.475, TOL_REL));
+%! assert (stk_isequal_tolrel (dC1, [0.765 0.0238 -1.019]', TOL_REL));
+%! assert (stk_isequal_tolrel (dC2, 3.0517e-03, TOL_REL));
 
 %!test  % Check the gradient on a 2D test case
 %!
@@ -234,9 +236,9 @@ end % function
 %! zi = stk_feval (f, xi);
 %!
 %! model.param = [1 1];
-%! [r1 dr] = stk_param_relik (model, xi, zi);
+%! [C1 dC] = stk_param_relik (model, xi, zi);
 %!
 %! model.param = model.param + DELTA * [0 1];
-%! r2 = stk_param_relik (model, xi, zi);
+%! C2 = stk_param_relik (model, xi, zi);
 %!
-%! assert (stk_isequal_tolrel (dr(2), (r2 - r1) / DELTA, TOL_REL));
+%! assert (stk_isequal_tolrel (dC(2), (C2 - C1) / DELTA, TOL_REL));
